--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ p {
 	margin-bottom: 5px;
 }
 
-#cat_button {
+#cat_save_button {
 	background-image: url('icons/iconButton.png');
 	background-size: auto;
 	text-shadow:
